# libmidi

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: .gitignore
docs/source/: conf.py  index.rst
libmidi/: __init__.py
libmidi/types/: __init__.py  chunk.py  event.py  header.py  message.py  midifile.py  track.py
libmidi/types/messages/: __init__.py  channel.py  common.py  meta.py  system.py
libmidi/utils/: __init__.py  bytes.py  time.py  variable_length.py
